2002-06-26  Paul Eggert  <eggert@twinsun.com>

	* Makefile.am (maintainer-check): Don't assume that egrep exists;
	this fixes a portability bug introduced in the 2002-06-08 fix for
	PR automake/317.
	
2002-06-26  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (required_targets): Add ps and ps-am.
	(initialize_per_input): Reset them.
	(handle_texinfo_helper): Fill @pss_list, and define the
	PSS make variable.
	* lib/am/texinfos.am (RECURSIVE_TARGETS): Add ps-recursive.
	(ps, ps-am): New targets.
	* automake.texi (Auxiliary Programs) <texinfo.tex>: Mention
	`make ps' and `make pdf'.
	(Texinfo): Document `make ps', `make pdf', and `make dvi'.
	(Extending): The `ps' and `pdf' targets support a `-local' version.

2002-06-26  Art Haas  <ahaas@neosoft.com>

	* automake.texi: s/.../@dots{}/.

2002-06-26  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* configure.in: Check that ln works, fall back to `cp -p'.
	* Makefile.am (install-exec-hook): Use $(LN) instead of ln.
	Reported by Andreas Buening.

2002-06-21  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in: Register &lang_lex_target_hook for lex and lexxx.
	(lang_lex_target_hook): New function.
	* tests/lex3.c: Complete to check that maintainer-clean erases
	Lex's output.
	Reported by Flavien Astraud.  This was lost on 2001-06-23 too.

2002-06-21  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (lang_yacc_target_hook): Add $output to
	@maintainer_clean_files.  This was lost on 2001-06-23.
	* tests/yacc7.test, tests/yacc4.test: Complete to check
	that maintainer-clean erases YACC's output files,
	respectively with and without `-d'.
	Reported by Flavien Astraud.

2002-06-19  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/lang-compile.am (%FPFX%DEPMODE): Delete.  This is now
	traced from configure.ac.

	* automake.in (macro_define): Don't accept to override an AC_SUBST
	or Automake variable in a new condition.
	* tests/cond23.test, tests/cond24.test: New file.