@@ -1,4 +1,4 @@
-@set UPDATED 26 June 2002
+@set UPDATED 27 June 2002
 @set UPDATED-MONTH June 2002
 @set EDITION 1.6a
 @set VERSION 1.6a
