@@ -1,9 +1,14 @@
+2002-06-27  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* Makefile.am (fetch): Fetch install-sh from Autoconf CVS.
+	* lib/config.sub, lib/install-sh: New upstream versions.
+
 2002-06-26  Paul Eggert  <eggert@twinsun.com>
 
 	* Makefile.am (maintainer-check): Don't assume that egrep exists;
 	this fixes a portability bug introduced in the 2002-06-08 fix for
 	PR automake/317.
-	
+
 2002-06-26  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* automake.in (required_targets): Add ps and ps-am.
